--- a/AppSearchSample/app/build.gradle
+++ b/AppSearchSample/app/build.gradle
@@ -22,15 +22,17 @@ plugins {
 
 android {
     namespace 'com.android.example.appsearchsample'
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    compileSdkVersion versions.compileSdkVersion
+    buildToolsVersion versions.buildToolsVersion
 
     defaultConfig {
         applicationId "com.android.example.appsearchsample"
-        minSdkVersion 14
-        targetSdkVersion 31
+        minSdkVersion versions.minSdkVersion
+        targetSdkVersion versions.targetSdkVersion
+
         versionCode 1
         versionName "1.0"
+
         multiDexEnabled = true
     }
 
@@ -53,23 +55,20 @@ android {
 }
 
 dependencies {
-    def appsearch_version = "1.0.0-alpha03"
-
     // AppSearch dependencies
-    implementation "androidx.appsearch:appsearch:$appsearch_version"
-    implementation "androidx.appsearch:appsearch-local-storage:$appsearch_version"
-    implementation "androidx.appsearch:appsearch-platform-storage:$appsearch_version"
-    kapt "androidx.appsearch:appsearch-compiler:$appsearch_version"
+    implementation "androidx.appsearch:appsearch:$versions.app_search_version"
+    implementation "androidx.appsearch:appsearch-local-storage:$versions.app_search_version"
+    implementation "androidx.appsearch:appsearch-platform-storage:$versions.app_search_version"
+    kapt "androidx.appsearch:appsearch-compiler:$versions.app_search_version"
 
-    implementation 'androidx.activity:activity-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.concurrent:concurrent-futures-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.activity:activity-ktx:$versions.activity_ktx"
+    implementation "androidx.appcompat:appcompat:$versions.appcompat"
+    implementation "androidx.concurrent:concurrent-futures-ktx:$versions.concurrent_futures_ktx"
+    implementation "androidx.constraintlayout:constraintlayout:$versions.constraintlayout"
+    implementation "androidx.core:core-ktx:$versions.core_ktx"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle_ktx"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle_ktx"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle_ktx"
+    implementation "androidx.multidex:multidex:$versions.multidex"
+    implementation "com.google.android.material:material:$versions.material"
 }
