--- a/AppSearchSample/build.gradle
+++ b/AppSearchSample/build.gradle
@@ -1,37 +1,27 @@
-/*
- * Copyright 2021 The Android Open Source Project
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    ext.kotlin_version = "1.5.10"
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+plugins {
+    id 'com.android.application' version '7.4.2' apply false
+//    id 'com.android.library' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.kapt' version '1.8.10' apply false
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
+ext {
+    versions = [
+            compileSdkVersion: 33,
+            buildToolsVersion: "33.0.2",
+            minSdkVersion: 21,
+            targetSdkVersion: 33,
+
+            app_search_version: "1.1.0-alpha02",
+            activity_ktx: "1.7.0",
+            appcompat: "1.6.1",
+            concurrent_futures_ktx: "1.1.0",
+            constraintlayout: "2.1.4",
+            core_ktx: "1.9.0",
+            lifecycle_ktx: "2.6.1",
+            multidex: "2.0.1",
+            material: "1.8.0",
+    ]
 }
 
 task clean (type: Delete) {
