--- a/AppSearchSample/settings.gradle
+++ b/AppSearchSample/settings.gradle
@@ -14,5 +14,43 @@
  * limitations under the License.
  */
 
+pluginManagement {
+    repositories {
+        mavenLocal()
+        maven {
+            url 'https://maven.aliyun.com/repository/public/'   // central仓和jcenter仓的聚合仓
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/gradle-plugin'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        mavenLocal()
+        maven {
+            url 'https://s01.oss.sonatype.org/content/repositories/releases/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/public/'   // central仓和jcenter仓的聚合仓
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/gradle-plugin'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
+        google()
+        mavenCentral()
+    }
+}
+
 rootProject.name = "AppSearchSample"
 include ':app'
